--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,14 @@ jobs:
           aws-region: ap-south-1
 
       - name: Sync to S3
-        run: aws s3 sync . s3://coffee-rise-website-2026 --delete \
-          --exclude ".git/*" \
-          --exclude ".github/*" \
-          --exclude "infra/*" \
-          --exclude "README.md" \
-          --exclude "README.MD" \
-          --exclude "READ-ME" \
+        run: >-
+          aws s3 sync . s3://coffee-rise-website-2026 --delete
+          --exclude ".git/*"
+          --exclude ".github/*"
+          --exclude "infra/*"
+          --exclude "README.md"
+          --exclude "README.MD"
+          --exclude "READ-ME"
           --exclude "LICENSE"
 
       - name: Invalidate CloudFront Cache
