--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           --exclude "infra/*"
           --exclude "README.md"
           --exclude "README.MD"
-          --exclude "READ-ME"
+          --exclude "READ-ME.txt"
           --exclude "LICENSE"
 
       - name: Invalidate CloudFront Cache
